--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "expo": "^54.0.33",
     "expo-dev-client": "~6.0.20",
     "expo-notifications": "~0.32.16",
+    "expo-print": "~15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
