--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^7.10.1",
-    "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.10.1",
-    "@supabase/supabase-js": "^2.93.3",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-navigation/bottom-tabs": "^7.15.2",
+    "@react-navigation/native": "^7.1.31",
+    "@react-navigation/native-stack": "^7.14.2",
+    "@supabase/supabase-js": "^2.98.0",
     "expo": "^54.0.33",
     "expo-dev-client": "~6.0.20",
     "expo-notifications": "~0.32.16",
